# gesture-control

./: README.md  pyproject.toml
data/: gesture_model.pkl  landmarks.csv
src/hand_mouse/: actions.py  camera.py  cursor.py  gestures.py  gestures_ml.py  hand_tracker.py  main.py
src/hand_mouse/app/: actions.py  gestures_ml.py  main.py  states.py
src/hand_mouse/app/gesture_recognition/: geometry_gesture_recognition.py  gesture_recognition.py  ml_gesture_recognition.py
src/hand_mouse/collect/: main.py
src/hand_mouse/train/: main.py
