[project]
name = "hand-mouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Sazhin", email = "aleksandr.sazhin@mbr-targeting.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = ["opencv-python (>=4.13.0.92,<5.0.0.0)", "mediapipe (==0.10.14)", "pyautogui (>=0.9.54,<0.10.0)"]

[project.scripts]
hand-mouse = "hand_mouse.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"